cilium-cli/connectivity/builder/manifests/client-egress-to-echo-service-account-deny-port-range-ccnp.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: client-egress-to-echo-service-account-deny-port-range-ccnp
spec:
  description: "Deny client port range to echo endpoint with service account label"
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: client
  egressDeny:
  - toPorts:
    - ports:
      - port: "4096"
        endPort: 8191
        protocol: TCP
    toEndpoints:
    - matchLabels:
        io.cilium.k8s.policy.serviceaccount: echo-same-node
